--- a/index.html
+++ b/index.html
@@ -40,6 +40,117 @@
 		</div>
 	</section>
 
+	<!---------about Section--------->
+	<section class="about" id="about">
+		<div class="about-img">
+			<img src="img/about.jpg">
+		</div>
+
+		<div class="about-text">
+			<h2>About <span> Me</span></h2>
+			<h4>Website Designer!</h4>
+			<p>	ign Firms, Startup Design Firms, Custom Design Firms, eCommerce Design Firms, and App Design Firms. Custom Web Solution. 24x7 Customer Support. Secure Payment Gateway. Get A Free Web Quote. 24/7 Chat Support. Services: Web Page Design, Landing Page Design, App development, Mobile Website Design.
+			</p>
+			<a href="#" class="btn">More About</a>
+		</div>
+	</section>
+
+	<!---------Services Section---------->
+	<section class="services" id="services">
+	<div class="main-text">
+		<h2><span>My</span>Services</h2>
+	</div>
+	<div class="services-content">
+		<div class="box">
+			<div class="s-icons">
+				<i class='bx bx-mobile-alt'></i>
+			</div>
+			<h3>Web Design</h3>
+			<p>One Way to categories the actividades is in terms of the professional's area of  experience such as competive analysis, corporate stragety.</p>
+			<a href="#" class="btn">Read More</a>
+		</div>
+		
+		<div class="box">
+			<div class="s-icons">
+				<i class='bx bx-code-alt'></i>
+			</div>
+			<h3>Creative Design</h3>
+			<p>One Way to categories the actividades is in terms of the professional's area of  experience such as competive analysis, corporate stragety.</p>
+			<a href="#" class="btn">Read More</a>
+		</div>
+
+		<div class="box">
+			<div class="s-icons">
+				<i class='bx bx-edit-alt'></i>
+			</div>
+			<h3>Creative Design</h3>
+			<p>One Way to categories the actividades is in terms of the professional's area of  experience such as competive analysis, corporate stragety.</p>
+			<a href="#" class="btn">Read More</a>
+		</div>
+	</div>
+</section>
+
+<!----------Prtfolio Section---------->
+<section class="portfolio" id="portfolio">
+	<div class="main-text">
+		<h2><span>lastest</span>Project</h2>
+	</div>
+	<div class="portfolio-content">
+		<div class="row">
+			<img src="img/project1.jpg">
+			<div class="layer">
+				<h5>Visual Design</h5>
+				<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
+				<a href="#"><i class='bx bx-link-external'></i></a>
+			</div>
+		</div>
+		<div class="row">
+			<img src="img/project2.jpg">
+			<div class="layer">
+				<h5>Visual Design</h5>
+				<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
+				<a href="#"><i class='bx bx-link-external'></i></a>
+			</div>
+		</div>
+
+		<div class="row">
+			<img src="img/project3.jpg">
+			<div class="layer">
+				<h5>Visual Design</h5>
+				<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
+				<a href="#"><i class='bx bx-link-external'></i></a>
+			</div>
+		</div>
+
+		<div class="row">
+			<img src="img/project4.jpg">
+			<div class="layer">
+				<h5>Visual Design</h5>
+				<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
+				<a href="#"><i class='bx bx-link-external'></i></a>
+			</div>
+		</div>
+
+		<div class="row">
+			<img src="img/project5.jpg">
+			<div class="layer">
+				<h5>Visual Design</h5>
+				<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
+				<a href="#"><i class='bx bx-link-external'></i></a>
+			</div>
+		</div>
+
+		<div class="row">
+			<img src="img/project6.jpg">
+			<div class="layer">
+				<h5>Visual Design</h5>
+				<p>Check out 10 best Design's updates for the top web design & development compaines.</p>
+				<a href="#"><i class='bx bx-link-external'></i></a>
+			</div>
+		</div>
+	</div>
+
+</section>
 </body>
 
 </html>
